[package]
name = "blind-image-steganograph-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blind-image-steganography = { path = "../lib" }
clap = { version = "4", features = ["derive"] }
image = "0.24"
