[package]
name = "blind-image-steganography"
version = "0.0.0"
authors = ["Thimo \"Tiquthon\" Neumann <tiquthon@gmail.com>"]
edition = "2021"
description = "Hide arbitrary data within an image without changing its perceptual quality significantly."
readme = "README.md"
repository = "https://github.com/tiquthon/blind-image-steganograph"
license = "MIT"
keywords = ["blind", "image", "steganography"]
publish = false

[dependencies]
image = { version = "0.24", default-features = false, optional = true }
thiserror = "1"
typed-builder = "0.18"
webp = { version = "0.2", optional = true }

[features]
default = ["webp"]
webp = ["dep:webp", "dep:image"]

[dev-dependencies]
temp-dir = "0.1.12"
strum = { version = "0.26", features = ["derive"] }
